src/BusinessLogic/Resources/scss/ui-controls.scss
/* ... */
// mobile rules
@media (max-width: 768px) {
  #pl-page {
    button, .pl-button {
      width: 100%;
    }

    section {
      .pl-button {
        width: auto;
      }
    }

    .pl-header-holder {
      .pl-button {
        display: none;
      }
    }

    .pl-shipping-services-list-item {
      .pl-wrap-items .pl-service-property {
        min-width: 50%;
      }

      .pl-button {
        width: 100%;

        &.pl-small {
          padding: 11px;
        }
      }
    }

    .pl-modal-mask {
      .pl-modal {
        .pl-modal-title {
          padding: 20px 20px 0;
        }

        .pl-modal-body {
          padding: 20px;
        }

        .pl-modal-footer {
          padding: 0 20px 20px;

          .pl-button {
            min-width: 50%;
          }
        }
      }
    }
  }
}

// mobile and tablet rules
@media (max-width: 1280px) {
  #pl-page {
    .pl-shipping-services-table {
      display: none;
    }

    .pl-shipping-services-list {
      display: flex;
    }
  }
}

// tablet rules
@media (min-width: 769px) and (max-width: 1280px) {
  #pl-page {
  }
}

